fix: scrollbar fixes for View and Edit mode

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -15,10 +15,16 @@ body {
     }
 }
 
+.app-shell-app {
+    overflow: hidden !important;
+}
+
 .dashboard-wrapper {
     background-color: #f4f6f8;
     padding-left: 10px;
     padding-right: 10px;
+    overflow: auto;
+    padding-bottom: 100px;
 }
 
 /* plugin TODO */
